--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -56,15 +56,12 @@ library(zoo)
 
 
 ---
-
 # 4.0 Exploratory Data Analysis
 
 ## 4.1 Area of Research
-Determine the efficacy of temperature as the independent variable in prediction 
-of energy demand in the subsequent 24 hours on a half hourly basis for NSW 
-utilizing statistical models i.e. regression. Explore the predictive improvement 
-through the addition of independent variables. Do these models provide 
-comparable predictive results to the supplied predictions and if so under what 
+Determine the efficacy of temperature as the independent variable in prediction of energy demand in the subsequent 24 hours on a half hourly basis for NSW utilizing statistical models. 
+
+Explore the predictive improvement through the addition of independent variables. Do these models provide comparable predictive results to the supplied predictions and if so under what 
 circumstances.
 
 ## Collecting and Loading Data
@@ -72,42 +69,25 @@ circumstances.
 ### Provided Data 
 
 ```{r, message=FALSE}
-
-# NSW
+#Shared data for the project
 data_temperature_nsw <- read_csv(unzip("../data/NSW/temperature_nsw.csv.zip", files = "temperature_nsw.csv", exdir = tempdir())[1])
 data_demand_nsw <- read_csv(unzip("../data/NSW/totaldemand_nsw.csv.zip", files = "totaldemand_nsw.csv", exdir = tempdir())[1])
-
 ```
 
 ```{r ,message=FALSE}
+#data extraction from Github
 data_forecastdemand_nsw_part1 <- read_csv(unzip("../data/NSW/forecastdemand/forecastdemand_part1.csv.zip", files = "forecastdemand_part1.csv", exdir = tempdir())[1])
-
 data_forecastdemand_nsw_part2 <- read_csv(unzip("../data/NSW/forecastdemand/forecastdemand_part2.csv.zip", files = "forecastdemand_part2.csv", exdir = tempdir())[1])
-
 data_forecastdemand_nsw_part3 <- read_csv(unzip("../data/NSW/forecastdemand/forecastdemand_part3.csv.zip", files = "forecastdemand_part3.csv", exdir = tempdir())[1])
-
 data_forecastdemand_nsw_part4 <- read_csv(unzip("../data/NSW/forecastdemand/forecastdemand_part4.csv.zip", files = "forecastdemand_part4.csv", exdir = tempdir())[1])
-
 data_forecastdemand_nsw_part5 <- read_csv(unzip("../data/NSW/forecastdemand/forecastdemand_part5.csv.zip", files = "forecastdemand_part5.csv", exdir = tempdir())[1])
-
 ```
 
 ```{r}
 # Combine all forecastdemand into 1 df
-
-data_forecastdemand_nsw <- bind_rows(data_forecastdemand_nsw_part1,
-                                     data_forecastdemand_nsw_part2,
-                                     data_forecastdemand_nsw_part3,
-                                     data_forecastdemand_nsw_part4,
-                                     data_forecastdemand_nsw_part5) 
-
+data_forecastdemand_nsw <- bind_rows(data_forecastdemand_nsw_part1, data_forecastdemand_nsw_part2, data_forecastdemand_nsw_part3, data_forecastdemand_nsw_part4,data_forecastdemand_nsw_part5) 
 # Clear memory
-rm(data_forecastdemand_nsw_part1,
-   data_forecastdemand_nsw_part2,
-   data_forecastdemand_nsw_part3,
-   data_forecastdemand_nsw_part4,
-   data_forecastdemand_nsw_part5)
-
+rm(data_forecastdemand_nsw_part1,data_forecastdemand_nsw_part2, data_forecastdemand_nsw_part3, data_forecastdemand_nsw_part4, data_forecastdemand_nsw_part5)
 ```
 
 
@@ -117,26 +97,23 @@ rm(data_forecastdemand_nsw_part1,
 ## Reference: https://www.michaelplazzer.com/datasets/australian-public-holiday-data/
 
 holidays <- read_csv('../data/Aus_public_hols_2009-2022-1.csv')
-
 holidays_nsw <- holidays %>% 
   filter(State == 'NSW')
 
+#Further analysis and integration can be accomplished on the below variables, including solar, rainfall and population GDP. In our analysis we have not included this as part of our analysis, due to small team size
 
 ## Reference: http://www.bom.gov.au/climate/data/index.shtml
 solar_expo_nsw <- read_csv("../data/daily_solar_exposure_bankstown_airport/IDCJAC0016_066137_1800_Data.csv")
-
 ## Reference: http://www.bom.gov.au/climate/data/index.shtml
 rainfall_nsw <- read_csv("../data/daily_rainfall_bankstown_airport/IDCJAC0009_066137_1800_Data.csv")
-
 ## Reference: https://data.worldbank.org/indicator/NY.GDP.MKTP.CD?locations=AU
 gdp <- read_csv('../data/GDP.csv', skip=4) %>% filter(`Country Name` == 'Australia')
-
 ```
 
 
 ##### Functions to clean and wrangle data
 ``` {r}
-# Checks for NA values
+# Identification and Removal of Null Values: An anomaly was detected in Data, where a singular instance of a missing value (NA) was identified. Given the potential impact of missing data on the accuracy of our analysis, this NA value was promptly removed to maintain data integrity.
 
 check_for_na <- function(data) {
   # Get the name of the dataframe
@@ -164,10 +141,9 @@ check_for_na <- function(data) {
   cat("\n") # Add an extra newline for better separation between dataframes
 }
 
-
-
 ```
 
+### Wrangling function to align data re timeframes
 ```{r}
 # Converts string DATETIME into dttm and creates timestamp columns
 wrangle_demand_data <- function(df) {
@@ -190,48 +166,39 @@ wrangle_demand_data <- function(df) {
 ```
 
 
-### Dmeand Data
-
+### Demand Data representation
 ```{r}
 head(data_demand_nsw)
-```
-
-
-
-#### Demand data
-
-```{r}
 summary(data_demand_nsw)
-
 check_for_na(data_demand_nsw)
-
 df_demand_nsw <- wrangle_demand_data(data_demand_nsw)
-
 head(df_demand_nsw)
-
 ```
 
 ```{r}
+#The time series plot shows the fluctuation of electricity demand in New South Wales over 11 years. A clear seasonal pattern is observed, with peaks during winter and summer months, reflecting higher heating and cooling needs.
 
+# Calculate sequence of years
+year_sequence <- seq(from = floor_date(min(df_demand_nsw$DATETIME), "year"),
+                     to = ceiling_date(max(df_demand_nsw$DATETIME), "year"),
+                     by = "1 year")
+
+# Plot data with vertical lines
 df_demand_nsw %>% 
-  ggplot(aes(x=DATETIME, y=TOTALDEMAND)) +
+  ggplot(aes(x = DATETIME, y = TOTALDEMAND)) +
   geom_line() +
-  geom_vline(data = data.frame(x = seq(from = floor_date(min(df_demand_nsw$DATETIME), "year"),
-                                       to = ceiling_date(max(df_demand_nsw$DATETIME), "year"),
-                                       by = "1 year")), 
+  geom_vline(data = data.frame(x = year_sequence), 
              aes(xintercept = as.numeric(x)), 
-             linetype = "dotted", color = "red") +
-  scale_x_datetime(
-    date_breaks = '1 year',
-    date_labels = '%Y'
-  ) +
-  theme_minimal()
-
+             linetype = "dotted", color = "orange") +
+  scale_x_datetime(date_breaks = '1 year', date_labels = '%Y') +
+  labs(x = "Year", y = "Total Demand", title = "Total Demand Over Time") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5)) 
 
 ```
 
 ```{r , message=FALSE}
-
+#This set of line graphs illustrates the average electricity demand throughout a typical week in each month of the year, with lines representing different weeks within each month. 
 df_demand_nsw_monthly <- df_demand_nsw %>% 
   group_by(Month, WeekOfMonth, TimeOfDay) %>% 
   summarise(MeanDemand = mean(TOTALDEMAND)) %>% 
@@ -245,9 +212,11 @@ df_demand_nsw_monthly %>%
   scale_y_continuous(name = "Mean Total Demand") +
   labs(title = "Weekly Pattern of Electricity Demand by Month") +
   theme_minimal() + 
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
-        strip.text.x = element_text(size = 8))
+  theme(axis.text.x = element_text(angle = 45, hjust = 0.5), 
+        strip.text.x = element_text(size = 6), legend.position = "bottom", plot.title = element_text(hjust = 0.5))
+
 ```
+
 
 ```{r}
 
@@ -552,8 +521,6 @@ ggplot(df_nsw_daily_long, aes(x = Solar_exposure, y = Temperature)) +
 ```
 
 
-
-
 ```{r}
 df_nsw_daily <- inner_join(df_nsw_daily, df_rainfall_nsw)
 df_nsw_daily_long <- inner_join(df_nsw_daily_long, df_rainfall_nsw)
@@ -632,7 +599,6 @@ df_forecastdemand_nsw <- data_forecastdemand_nsw %>%
 
 ```{r}
 head(df_forecastdemand_nsw)
-
 
 ```
 
@@ -897,21 +863,6 @@ summary(lm)
 ```
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## Re-cleaning Data
 ```{r}
 df_demand_nsw <- df_demand_nsw %>% 
@@ -1076,249 +1027,3 @@ forecasts %>% accuracy(df) %>% arrange(RMSE, 'desc')
 forecasts %>% autoplot(tail(dfts_nsw, 96), level=NULL, size=1.5, alpha=0.7)
 
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-############# NOT RELAVENT (KEEP JUST IN CASE)
-
-```
-  combined_data <- df %>%
-    left_join(forecasts, by = "DATETIME") %>% 
-    filter(DATETIME >= ymd("2018-06-20") & DATETIME <= ymd("2018-06-30"))
-
-  ggplot(combined_data) +
-    geom_line(aes(x = DATETIME, y = TOTALDEMAND.x, color = "Actual Demand"), size = 1.5) +
-    geom_line(aes(x = DATETIME, y = .mean, color = "Forecast Demand"), size = 1.5) +
-    scale_color_manual(values = c("Actual Demand" = "black",
-                                  "Forecast Demand" = "red")) +
-    labs(title = "Total Demand Forecast vs Actual",
-         x = "Time",
-         y = "Total Demand",
-         color = "Legend") +
-    theme_minimal()
-```
-
-
-
-
-```{r}
-#evaluate_forecast(df, forecasts_fr)
-accuracy(forecasts_fr, df)
-```
-
-```{r}
-
-e
-
-```
-
-## Normal SAMIRA
-```{r}
-
-fit <- train_set %>% 
-  model(
-    arima = ARIMA(TOTALDEMAND ~ pdq(d=1) + PDQ(D=1, period=48))
-  )
-
-```
-
-
-```{r}
-
-forecasts <- fit %>% 
-  forecast(h=48*7)
-
-```
-
-```{r}
-accuracy(forecasts, df)
-
-```
-
-```{R}
-  combined_data <- df %>%
-    left_join(forecasts, by = "DATETIME") %>% 
-    filter(DATETIME >= ymd("2018-06-20") & DATETIME <= ymd("2018-06-30"))
-
-  ggplot(combined_data) +
-    geom_line(aes(x = DATETIME, y = TOTALDEMAND.x, color = "Actual Demand"), size = 1.5) +
-    geom_line(aes(x = DATETIME, y = .mean, color = "Forecast Demand"), size = 1.5) +
-    scale_color_manual(values = c("Actual Demand" = "black",
-                                  "Forecast Demand" = "red")) +
-    labs(title = "Total Demand Forecast vs Actual",
-         x = "Time",
-         y = "Total Demand",
-         color = "Legend") +
-    theme_minimal()
-```
-
-
-The auto arima gets  ARIMA(2,1,2)(2,1,0)[48]
-
-# Try adding temperature^2
-```{r}
-
-  
-fit_temp <- train_set %>% 
-  model(
-    arima_temp = ARIMA(TOTALDEMAND ~ pdq(2,1,2) + PDQ(2,1,0, period=48) +
-                         TEMPERATURE_SQ)
-  )
-
-
-```
-
-
-```{r}
-
-forecasts_temp <- fit_temp %>% 
-  forecast(h=48, test_set)
-
-```
-
-```{r}
-accuracy(forecasts_temp, df)
-
-```
-
-
-
-
-```{r}
-
-
-evaluate_forecast <- function(actual_data, forecast_data, start_date, end_date, benchmark) {
-  
-  # Merge actual and forecast data
-  combined_data <- actual_data %>%
-    left_join(forecast_data, by = "DATETIME") %>% 
-    filter(DATETIME >= start_date & DATETIME <= end_date)
-  
-  # Calculate accuracy metrics
-  accuracy_metrics <- accuracy(forecast_data, actual_data)
-  
-  # Print accuracy metrics
-  print(accuracy_metrics)
-  
-  # Create a plot to compare actual vs forecast
-  if (benchmark) {
-    p <- ggplot(combined_data) +
-      geom_line(aes(x = DATETIME, y = TOTALDEMAND.x, color = "Actual Demand"), size = 1.5) +
-      geom_line(aes(x = DATETIME, y = .mean, color = "Forecast Demand"), size = 1.5) +
-      geom_line(aes(x = DATETIME, y = FORECASTDEMAND.x, color = "Benchmark"), size = 1.5) +
-      scale_color_manual(values = c("Actual Demand" = "black", "Forecast Demand" = "red", "Benchmark" = "blue")) +
-      labs(title = "Total Demand Forecast vs Actual",
-           x = "Time",
-           y = "Total Demand",
-           color = "Legend") +
-      theme_minimal()
-  } else {
-    p <- ggplot(combined_data) +
-      geom_line(aes(x = DATETIME, y = TOTALDEMAND.x, color = "Actual Demand"), size = 1.5) +
-      geom_line(aes(x = DATETIME, y = .mean, color = "Forecast Demand"), size = 1.5) +
-      scale_color_manual(values = c("Actual Demand" = "black", "Forecast Demand" = "red")) +
-      labs(title = "Total Demand Forecast vs Actual",
-           x = "Time",
-           y = "Total Demand",
-           color = "Legend") +
-      theme_minimal()
-  }
-  
-  # Print the plot
-  print(p)
-}
-
-```
-
-```{r}
-evaluate_forecast(df,forecasts_temp,ymd("2018-06-28"), ymd("2018-06-30"),FALSE)
-
-```
-
-# Adding IsHoliday and IsWeekday
-
-```{r}
-fit_temp_holiday <- train_set %>% 
-  model(
-    arima_temp = ARIMA(TOTALDEMAND ~ pdq(2,1,2) + PDQ(2,1,0, period=48) +
-                         TEMPERATURE + IsHoliday + IsWeekday)
-  )
-
-
-
-```
-
-```{r}
-
-forecasts_temp_holiday <- fit_temp %>% 
-  forecast(test_set)
-
-```
-
-```{r}
-
-accuracy(forecasts_temp_holiday, df)
-```
-
-```{r}
-
-evaluate_forecast(df,forecasts_temp_holiday,ymd("2018-06-28"), ymd("2018-06-30"),FALSE)
-
-```
-
-```{r}
-
-
-arima_fit <- train_set %>% 
-  model(
-    sarima_111212 = ARIMA(TOTALDEMAND ~ pdq(1,1,1) + PDQ(2,1,2, period=48))
-  )
-
-```
-
-
-```
-library(dplyr)
-library(tidyr)
-library(purrr)
-
-# Function to expand daily data frames
-expand_daily_data <- function(df, date_column_name, variables) {
-  df %>%
-    mutate(DATETIME = map(DATE, ~ seq(as.POSIXct(paste(.x, "00:00:00")),
-                                      as.POSIXct(paste(.x, "23:30:00")),
-                                      by = "30 min"))) %>%
-    unnest(DATETIME) %>%
-    select(DATETIME, all_of(variables))  # Preserve other relevant variables
-}
-
-# Expand df_solar_expo_nsw
-df_solar_expo_expanded <- expand_daily_data(df_solar_expo_nsw, "DATE", c("Solar_exposure"))
-
-# Expand df_rainfall_nsw
-df_rainfall_expanded <- expand_daily_data(df_rainfall_nsw, "DATE", c("Rainfall_amount"))
-
-```
-
-```
-
-df_nsw <- df_nsw %>%
-  left_join(df_solar_expo_expanded, by = "DATETIME") %>%
-  left_join(df_rainfall_expanded, by = "DATETIME")
-
-```
-
