--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -212,14 +212,15 @@ df_demand_nsw_monthly %>%
   scale_y_continuous(name = "Mean Total Demand") +
   labs(title = "Weekly Pattern of Electricity Demand by Month") +
   theme_minimal() + 
-  theme(axis.text.x = element_text(angle = 45, hjust = 0.5), 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
         strip.text.x = element_text(size = 6), legend.position = "bottom", plot.title = element_text(hjust = 0.5))
 
 ```
 
 
 ```{r}
-
+# This plot prints the seasonal demand of electricity for entire data
+# Create a new column 'Season' based on the month
 df_demand_nsw_seasonly <- df_demand_nsw %>% 
   mutate(Season = case_when(
     Month %in% c(12, 1, 2) ~ "Summer",
@@ -228,21 +229,24 @@ df_demand_nsw_seasonly <- df_demand_nsw %>%
     Month %in% c(9, 10, 11) ~ "Spring",
     TRUE ~ NA_character_))
 
+# Plot boxplots
 df_demand_nsw_seasonly %>% 
-  ggplot(aes(x = factor(Hour), y = TOTALDEMAND)) +
-  geom_boxplot(aes(fill=Season)) +
-  facet_wrap(~Season, scales = "free_y") + # Faceting by season
-  labs(title = "Electricity Demand by Hour Across Seasons",
+  ggplot(aes(x = factor(Hour), y = TOTALDEMAND)) +  # Specify x and y variables
+  geom_boxplot(aes(fill=Season)) +  # Add boxplots, fill by season
+  facet_wrap(~Season, scales = "free_y") +  # Facet by season, with independent y-axes
+  labs(title = "Electricity Demand by Hour Across Seasons",  # Set plot title and axis labels
        x = "Hour of Day",
        y = "Total Demand") +
-  scale_x_discrete(name = "Time of Day", breaks = seq(0, 24, by = 2)) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 0, hjust = 1)) # Improve readability of x axis labels
+  scale_x_discrete(name = "Time of Day", breaks = seq(0, 24, by = 2)) +  # Customize x-axis
+  theme_minimal() +  # Apply minimal theme
+  theme(axis.text.x = element_text(angle = 0, hjust = 0.5),  # Improve readability of x-axis labels
+        plot.title = element_text(hjust = 0.5))  # Center plot title
 
 
 ```
 
 ```{r ,message=FALSE}
+# This code snippet segments the demand data by day of the week and time of day and calculates the mean demand for each combination. Then, it creates a line plot to visualize the mean total demand by time of day, with each line representing a different day of the week.
 
 df_demand_nsw_weekly <- df_demand_nsw %>% 
   group_by(DayOfWeek, TimeOfDay) %>% 
@@ -253,12 +257,15 @@ df_demand_nsw_weekly %>% ggplot(aes(x = TimeOfDay, y = MeanDemand)) +
   scale_x_continuous(name = "Time of Day", breaks = seq(0, 24, by = 1), labels = function(x) sprintf("%02d:00", x)) +
   scale_y_continuous(name = "Mean Total Demand") +
   scale_color_brewer(palette = "Dark2") +
-  labs(title = "Mean Total Demand by Time of Day and Day of Week") +
+  labs(title = "Mean demand against day-of-week") +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 0.5), plot.title = element_text(hjust = 0.5))
 
 
 ```
+Weekday Demand (Monday to Friday): There is a pronounced double-peaked pattern on weekdays, with electricity demand rising sharply in the morning, tapering slightly midday, and then peaking again in the early evening. This likely reflects routine domestic and commercial activities, such as people getting ready for work and school in the morning and then returning home and using various appliances in the evening.
+Weekend Demand (Saturday and Sunday): The weekend pattern, while still showing two peaks similar to the weekdays, has less overall demand.
+Overall Trends: Across all days, there is a significant drop in demand late at night, when most residential and commercial activities cease, until early morning when the demand begins to rise with the start of a new day.
 
 
 ```{r , message=FALSE}
@@ -276,13 +283,14 @@ df_demand_nsw_daily %>%
   geom_smooth() +
   scale_x_date(date_breaks = "1 month", date_labels = "%b") + # Customize x-axis labels
   labs(x = "Month", y = "Avg demand", title = "Average daily demand") +
-  theme_minimal() # Use a minimal theme
+  theme_minimal() + # Use a minimal theme
+  theme(plot.title = element_text(hjust = 0.5)
+)
 
 
 ```
 
-Some days are significantly lower demand, suspect to be holidays.
-
+there is a strong seasonality as predicted by the data
 ### Temperature data
 
 ```{r}
@@ -336,34 +344,28 @@ head(df_aligned_temperature_nsw)
 
 
 ```{r}
-
+#This code produces a plot with temperature data over time, blue vertical lines indicating the start of each year.
 
 df_aligned_temperature_nsw %>% 
-  ggplot(aes(x=DATETIME, y=TEMPERATURE)) +
+  ggplot(aes(x = DATETIME, y = TEMPERATURE)) +
   geom_line() +
   geom_vline(data = data.frame(x = seq(from = floor_date(min(df_temperature_nsw$DATETIME), "year"),
                                        to = ceiling_date(max(df_temperature_nsw$DATETIME), "year"),
                                        by = "1 year")), 
              aes(xintercept = as.numeric(x)), 
-             linetype = "dotted", color = "red") +
-  scale_x_datetime(
-    date_breaks = '1 year',
-    date_labels = '%Y'
-  ) +
-  theme_minimal()
-
-
+              color = "blue") +  # Change the color to red
+  scale_x_datetime(date_breaks = "1 year", date_labels = "%Y") +
+  labs(x = "Year", y = "Temperature", title = "Temperature variation over time") +
+  theme(plot.title = element_text(hjust = 0.5)
+)
 ```
-
+The data shows strong seasonality in the variation
 
 ## Forecast Data
 
 ```{r}
 head(data_forecastdemand_nsw)
 
-```
-
-```{r}
 df_forecastdemand_nsw_min <- data_forecastdemand_nsw %>%
   group_by(DATETIME) %>%
   filter(LASTCHANGED == min(LASTCHANGED)) 
@@ -372,10 +374,7 @@ df_forecastdemand_nsw_max <- data_forecastdemand_nsw %>%
   group_by(DATETIME) %>%
   filter(LASTCHANGED == max(LASTCHANGED)) 
 
-
 ```
-
-## Bivariate Analysis
 
 ##### Holidays 
 
@@ -393,24 +392,19 @@ df_demand_nsw <- df_demand_nsw %>%
 df_demand_nsw %>% 
   ggplot(aes(x = IsHoliday, y = TOTALDEMAND)) +
   geom_boxplot(aes(fill=IsHoliday)) +
-  labs(title = "Electricity Demand on Holidays vs. Non-Holidays",
-       x = "", y = "Total Demand") +
-  theme_minimal()
+  labs(title = "Comparing holiday demands",
+       x = "", y = "Demand") +
+  theme_minimal() +
+  theme(plot.title = element_text(hjust = 0.5))
 
 
 ```
-
+The box plot compares electricity demand on holidays versus non-holidays. It appears that the median electricity demand on holidays is lower than on non-holidays. There are several extreme values that deviate from the typical ranges on both types of days.
 
 ##### Demand vs Temperature
 ```{r}
 # Inner join to get only matched data
 df_nsw <- inner_join(df_demand_nsw, df_aligned_temperature_nsw, by = "DATETIME")
-
-```
-
-
-```{r}
-
 
 # Outer join to find unmatched data
 unmatched_demand <- anti_join(df_demand_nsw, df_aligned_temperature_nsw, by = "DATETIME")
@@ -431,23 +425,40 @@ unique(excluded_data$Source)
 Correlation testing
 ```{r}
 
-cor.test(df_nsw$TEMPERATURE, df_nsw$TOTALDEMAND, use = "pearson")
+  cor.test(df_nsw$TEMPERATURE, df_nsw$TOTALDEMAND, use = "pearson")
 
 ```
 p-value is small reject null-hypothesis.
 
 
 ```{r}
-
-
 df_nsw %>% 
-  ggplot(aes(x=TEMPERATURE, y=TOTALDEMAND)) +
-  geom_point() +
+  ggplot(aes(x = TEMPERATURE, y = TOTALDEMAND, color = "Data Points")) +  # Set color aesthetic
+  geom_point(color = "red") +  # Change color of data points to blue
+  labs(title = "Temperature and electricity demand relationship",
+       x = "Temperature",
+       y = "Electricity Demand") +
+theme(plot.title = element_text(hjust = 0.5))
+
+library(ggplot2)
+
+# Create the scatter plot
+plot <- df_nsw %>% 
+  ggplot(aes(x = TEMPERATURE, y = TOTALDEMAND, color = "Data Points")) +  
+  #geom_point(color = "blue") +  
   labs(title = "Relationship between Temperature and Electricity Demand",
        x = "Temperature",
-       y = "Electricity Demand")
+       y = "Electricity Demand") +
+  theme(plot.title = element_text(hjust = 0.5)) +  # Center the plot title horizontally
+  geom_text(x = 30, y = 3000, label = "Highest Demand (>30°C)", color = "red", size = 4, hjust = -0.1) +
+  geom_text(x = 10, y = 3000, label = "Lowest Demand (<10°C)", color = "blue", size = 4, hjust = 1.1) +
+  geom_text(x = 20, y = 1500, label = "Moderate Demand (20°C)", color = "orange", size = 4, hjust = 0.5) +
+  annotate("text", x = 10, y = 4000, label = "Temperature variability\naffects air conditioning reliability", color = "blue", size = 3) +
+  annotate("text", x = 10, y = 3800, label = "during extreme hot and cold temperatures.", color = "blue", size = 3) +
+  annotate("text", x = 10, y = 3600, label = "Moderate temperatures require moderate demand.", color = "blue", size = 3)
 
-
+# Print the plot
+print(plot)
 
 
 ```
