--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -67,6 +67,11 @@ library(tseries)
 library(tsibble)
 library(doParallel)
 library(zoo)
+library(caret)
+library(lattice)
+library(pdp)
+library(foreach)
+library(furrr)
 ```
 
 
@@ -974,17 +979,50 @@ dfts_demand_nsw %>%
 KPSS suggests after differencing the model is stationary. (Both non-seasonal and seasonal)
 
 
+
 ```{r}
-dfts_demand_nsw %>% 
+
+library(gridExtra)
+
+# Load or prepare your data frame `dfts_demand_nsw` with a column `TOTALDEMAND`
+# dfts_demand_nsw <- your_data_frame
+
+# Calculate ACF for original data
+plot1 <- dfts_demand_nsw %>% 
+  ACF(TOTALDEMAND, lag_max = 336*2) %>% 
+  autoplot() + 
+  ggtitle("ACF of TOTALDEMAND") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_x_continuous(breaks = seq(0, 336*2, by = 96))  # Set x-axis breaks
+
+# Calculate PACF for original data
+plot2 <- dfts_demand_nsw %>% 
+  PACF(TOTALDEMAND, lag_max = 336) %>% 
+  autoplot() + 
+  ggtitle("PACF of TOTALDEMAND") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_x_continuous(breaks = seq(0, 336, by = 96))  # Set x-axis breaks
+
+# Calculate ACF for differenced data
+plot3 <- dfts_demand_nsw %>% 
   mutate(diff_TOTALDEMAND = difference(TOTALDEMAND, 48)) %>% 
   ACF(diff_TOTALDEMAND, lag_max = 336*2) %>% 
-  autoplot()
+  autoplot() + 
+  ggtitle("ACF of differenced TOTALDEMAND") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_x_continuous(breaks = seq(0, 336*2, by = 96))  # Set x-axis breaks
 
-
-dfts_demand_nsw %>% 
+# Calculate PACF for differenced data
+plot4 <- dfts_demand_nsw %>% 
   mutate(diff_TOTALDEMAND = difference(TOTALDEMAND, 48)) %>% 
   PACF(diff_TOTALDEMAND, lag_max = 336) %>% 
-  autoplot()
+  autoplot() + 
+  ggtitle("PACF of differenced TOTALDEMAND") + 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_x_continuous(breaks = seq(0, 336, by = 96))  # Set x-axis breaks
+
+# Combine all plots into one with a common title
+grid.arrange(plot1, plot2, plot3, plot4, ncol = 2)
 
 ```
 
@@ -995,14 +1033,7 @@ PACF significant lag at lag 1, 49, 97, ... Suggest at least AR(1) and SAR(1)
 Seasonal: Significant at multiple lags, 96, 192, 240, 360 suggests at least MA(2) and SMA(2)
 
 
-```{r}
-par(mfrow = c(2, 2))
-acf(df_demand_nsw$TOTALDEMAND, 100, main = 'Autocorrelation')
-acf(df_demand_nsw$TOTALDEMAND, 1500, main = 'Autocorrelation')
-pacf(df_demand_nsw$TOTALDEMAND, 100, main = 'Partial autocorrelation')
-pacf(df_demand_nsw$TOTALDEMAND, 1500, main = 'Partial autocorrelation')
 
-```
 
 
 #### STL decomposition 
@@ -1111,7 +1142,7 @@ check_for_na(df_lj)
 
 ```{r}
 
-df_nsw <- left_join(df_lj, df_forecastdemand_nsw, by='DATETIME')
+df_nsw <- left_join(df_lj, df_forecastdemand_nsw_max, by='DATETIME')
 
 ```
 
@@ -1120,7 +1151,7 @@ df_nsw <- left_join(df_lj, df_forecastdemand_nsw, by='DATETIME')
 ```{r}
 # Uses the latest last change date
 df_forecastdemand_nsw <- data_forecastdemand_nsw %>% 
-  mutate(DATETIME = as_date(DATETIME, tz='AUstralia/Brisbane')) %>% 
+  mutate(DATETIME = as_datetime(DATETIME, tz='AUstralia/Brisbane')) %>% 
   group_by(DATETIME) %>%
   filter(LASTCHANGED == max(LASTCHANGED)) %>%
   summarize(FORECASTDEMAND = mean(FORECASTDEMAND), .groups = 'drop') %>% 
@@ -1146,9 +1177,7 @@ df_nsw <- left_join(df_lj, df_forecastdemand_nsw, by='DATETIME')
 df <- df_nsw %>% 
   select(DATETIME, TOTALDEMAND, TEMPERATURE, FORECASTDEMAND, IsHoliday) %>% 
   mutate(
-    TEMPERATURE_SQ = TEMPERATURE^2,
-    IsWeekday = ifelse(wday(DATETIME, week_start = 1) %in% 1:5, 1, 0),
-    IsHoliday = ifelse(IsHoliday == TRUE, 1, 0)
+    TEMPERATURE_SQ = TEMPERATURE^2
   ) %>%
   as_tsibble(index = DATETIME)
 
@@ -1161,7 +1190,7 @@ start_date <- ymd("2015-06-01")
 end_date <- ymd("2018-06-30")
 
 dfts_nsw <- df %>% 
-  select(DATETIME, TOTALDEMAND, TEMPERATURE, FORECASTDEMAND,TEMPERATURE_SQ, IsHoliday, IsWeekday) %>% 
+  select(DATETIME, TOTALDEMAND, TEMPERATURE, FORECASTDEMAND,TEMPERATURE_SQ) %>% 
   as_tsibble(index = DATETIME) %>% 
   filter(DATETIME >= start_date & DATETIME <= end_date)
 
@@ -1179,9 +1208,13 @@ test_set <- dfts_nsw[(n-47):n, ]
 
 ```{r}
 
-train_set %>% gg_tsdisplay(difference(TOTALDEMAND, lag=48) %>% difference(),
-                           plot_type='partial', lag_max = 48*7) +
-  labs(title = 'Double Differenced', y='')
+train_set %>% 
+  gg_tsdisplay(
+    difference(difference(TOTALDEMAND, lag = 48), lag = 1), 
+    plot_type = 'partial', 
+    lag_max = 48*7
+  ) +
+  labs(title = 'Double Differenced', y = '')
 
 ```
 
@@ -1190,13 +1223,18 @@ train_set %>% gg_tsdisplay(difference(TOTALDEMAND, lag=48) %>% difference(),
 fit <- train_set %>% 
   model(
     arima_fr = ARIMA(TOTALDEMAND ~ pdq(d=1) + PDQ(0,0,0) +
-                        fourier(period = 48, K = 8) +
-                        fourier(period = 48*7, K = 4) +
-                        fourier(period = 48*365, K = 4)),
-    sarima_auto = ARIMA(TOTALDEMAND ~ pdq(d=1) + PDQ(D=1, period=48)),
-    sarima_auto_temp = ARIMA(TOTALDEMAND ~ pdq(d=1) + PDQ(D=1, period=48) + TEMPERATURE + TEMPERATURE_SQ),
-    sarima_212210_temp = ARIMA(TOTALDEMAND ~ pdq(2,1,2) + PDQ(2,1,0, period=48) + TEMPERATURE + TEMPERATURE_SQ)
+                        fourier(period = 48, K = 3) +     # Daily 
+                        fourier(period = 48*7, K = 3)),   # Weekly
+    sarima_212210 = ARIMA(TOTALDEMAND ~ pdq(2,1,2) + PDQ(2,1,0, period=48)),
     
+    sarima_212210_fr = ARIMA(TOTALDEMAND ~ pdq(2,1,2) + PDQ(2,1,0, period=48) +
+                        fourier(period = 48*7, K = 3)), # Weekly
+    
+    sarima_auto_temp = ARIMA(TOTALDEMAND ~ pdq(d=1) + PDQ(D=1, period=48) + TEMPERATURE + TEMPERATURE_SQ),
+    
+    sarima_212210_temp_fr = ARIMA(TOTALDEMAND ~ pdq(2,1,2) + PDQ(2,1,0, period=48) + 
+                                TEMPERATURE + TEMPERATURE_SQ +
+                                fourier(period = 48*7, K = 3))    # Weekly
   )
 
 ```
@@ -1226,9 +1264,138 @@ forecasts %>% accuracy(df) %>% arrange(RMSE, 'desc')
 ```{r}
 
 
-forecasts %>% autoplot(tail(dfts_nsw, 96), level=NULL, size=1.5, alpha=0.7)
+forecasts %>% autoplot(tail(dfts_nsw, 96), level=NULL, size=1.2, alpha=0.9)
 
 ```
+
+
+
+```{r}
+# comparing adding fourier and without fourier
+
+selected_models_forecasts <- forecasts %>%
+  filter(.model %in% c('sarima_212210', 'sarima_212210_fr'))
+
+selected_models_forecasts %>% autoplot(tail(dfts_nsw, 96), level=NULL, size=1.2, alpha=0.9)
+```
+
+Selection of the final model:
+
+SARIMA_212210_fr
+
+
+
+```{r}
+
+initial_train_end <- nrow(dfts_nsw) - 48 * 5  # Training data ends 10 days before the dataset's end
+forecast_horizon <- 48  # Forecasting one day ahead (48 half-hour intervals)
+forecasts_list <- vector("list", 5)  # Store each forecast
+
+# Loop through each forecast iteration
+for (i in 1:5) {
+  # Define the training data up to the current endpoint
+  train_data <- dfts_nsw[1:(initial_train_end + (i - 1) * forecast_horizon), ]
+  
+  cat(sprintf("Fit %d starting: %s\n", i, Sys.time()))
+  # Fit the ARIMA model with Fourier terms
+  fit_arima <- train_data %>%
+    model(sarima_212210_temp_fr = ARIMA(TOTALDEMAND ~ pdq(2, 1, 2) + PDQ(2, 1, 0, period = 48) +
+                                        TEMPERATURE + TEMPERATURE_SQ +
+                                        fourier(K = 3, period = 48*7)))
+  
+  cat(sprintf("Fit %d done: %s\n", i, Sys.time()))
+  # Define new_data for forecasting: next 48 observations beyond the training set
+  test_set <- dfts_nsw[(initial_train_end + (i - 1) * forecast_horizon + 1):(initial_train_end + i * forecast_horizon), ]
+
+  # Forecast using the model
+  forecasts <- forecast(fit_arima, new_data = test_set)
+  forecasts_list[[i]] <- forecasts
+}
+
+# Combine forecasts into a single tsibble for plotting or evaluation
+combined_forecasts <- bind_rows(forecasts_list) %>% as_tibble()
+
+
+```
+
+
+
+```{r}
+# Extract forecast means
+forecast_means <- combined_forecasts %>%
+  select(.mean) %>%
+  pull()
+
+# Create a time series object from the forecasted means
+pred_arima_ts <- ts(forecast_means, start = c(ceiling((initial_train_end + 1) / 48), (initial_train_end + 1) %% 48), frequency = 48)
+
+# Actual data corresponding to the forecast periods
+actual_indices <- (initial_train_end + 1):(initial_train_end + 10 * forecast_horizon)
+actual_data <- dfts_nsw$TOTALDEMAND[actual_indices]
+
+# Calculate accuracy metrics
+accuracy_metrics <- accuracy(pred_arima_ts, actual_data)
+print(accuracy_metrics)
+
+
+```
+
+```{r}
+
+# Create a data frame for plotting
+plot_data <- data.frame(
+  Time = seq_along(actual_data),
+  Actual = actual_data,
+  Forecast = as.numeric(pred_arima_ts)
+)
+
+# Creating the plot
+p <- ggplot(plot_data, aes(x = Time)) +
+  geom_line(aes(y = Actual, colour = "Actual"), size = 1) +
+  geom_line(aes(y = Forecast, colour = "Forecast"), size = 1, linetype = "dashed") +
+  scale_color_manual(values = c("Actual" = "blue", "Forecast" = "red")) +
+  labs(title = "ARIMA Forecast vs Actual Data",
+       x = "Time (in 48 half-hour intervals per day)",
+       y = "Total Demand",
+       colour = "Legend") +
+  theme_minimal()
+
+# Display the plot
+print(p)
+
+
+
+
+```
+
+
+
+
+
+
+
+```{r}
+
+# Set up parallel processing
+num_cores <- detectCores() - 4
+cl <- makeCluster(num_cores)
+registerDoParallel(cl)
+plan(multisession, workers = num_cores)
+```
+
+
+```{r}
+stopCluster(cl)
+registerDoSEQ()  # Switch back to sequential processing
+plan(sequential)
+```
+
+
+
+
+
+
+
 
 
 
